syntax = "proto3";
package worker;
// The worker service definition.
service WorkerService {
  // Sends a processing request
  rpc ProcessRequest (TestRequest) returns (TestResponse) {}
}
// The request message containing sender, receiver, and imageId.
message TestRequest {
  string sender = 1;
  string receiver = 2;
  string imageId = 3;
}
// The response message containing the result.
message TestResponse {
  bool success = 1;
  int32 result = 2;
}